--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,12 +114,15 @@
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:id="@+id/radio1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:checked="true"
                             android:text="Bay"/>
 
                         <RadioButton
+                            android:id="@+id/radio2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -177,14 +180,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Puanınız"
+                    android:text="Durak Puanınız"
                     android:textSize="16sp"/>
 
-                <SeekBar
-                    android:id="@+id/pointSeekBar"
+                <RatingBar
+                    android:id="@+id/pointRatingBar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:max="5"/>
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
 
             <LinearLayout
